--- a/static/index.html
+++ b/static/index.html
@@ -55,7 +55,7 @@
                           <option value="1" selected>Manhattam</option>
                           <option value="2">Euclidiana</option>
                           <option value="3">Pearson</option>
-                          <option value="4">Soft Coseno</option>
+                          <option value="4">Coseno</option>
                         </select>
                         <label>Seleccione distancia</label>
                       </div>
@@ -107,7 +107,7 @@
                           </tbody>
                         </table>
                       </div>
-                      <div class="col s6">
+                      <!-- <div class="col s6">
                         <h4>Items Recomendados</h4>
                         <table>
                           <thead>
@@ -125,7 +125,7 @@
                       </tr>
                     </tbody>
                   </table>
-                </div>
+                </div> -->
               </div>
               
             </div>
